Finished the structure of the webpage, awaiting implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<app-navbar></app-navbar>
+<app-navbar id="navbar"></app-navbar>
+<app-bio-module id="bio"></app-bio-module>
+<app-project-module id="work"></app-project-module>
+<app-contact id="contact"></app-contact>
+<app-scroll-top></app-scroll-top>
 <router-outlet></router-outlet>
+<youtube-player
+[height]="1"
+[width]="1"
+></youtube-player>
