--- a/src/app/components/media/media.component.css
+++ b/src/app/components/media/media.component.css
@@ -1,97 +1,53 @@
-/* media.component.css */
-.media-container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    background-color: #f0f0f0;
-    transition: background-color 0.3s ease;
-  }
-  
-  .fullscreen {
-    background-color: #000;
-  }
-  
-  .media-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 2rem;
-    background-color: rgba(255, 255, 255, 0.7);
-    border: none;
-    cursor: pointer;
-    z-index: 2;
-  }
-  
-  .arrow-left {
-    left: 0;
-  }
-  
-  .arrow-right {
-    right: 0;
-  }
-  
-  .media-display {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .timer-bar {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 5px;
-    background-color: #ff5722;
-    animation: timer-animation linear;
-  }
-  
-  @keyframes timer-animation {
-    0% {
-      width: 100%;
-    }
-    100% {
-      width: 0;
-    }
-  }
-  
-  .fullscreen-toggle {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 10px;
-    background: transparent;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .mat-icon {
-    font-size: 24px;
-  }
-  
-  /* Remove scrollbars in fullscreen mode */
-  body.fullscreen {
-    overflow: hidden;
-  }
-  
-  /* Apply custom styles to ngx-youtube-player */
-  ngx-youtube-player {
-    display: block;
-    max-width: 100%;
-    max-height: 100%;
-  }
+.media-container{
+  width: 600px;
+  height: 400px;
+  background-color: black;
+  justify-self: center;
+}
+
+.youtube{
+  width: 100%;
+  height: 100%;
+}
+
+.image{
+  width: 100%;
+  height: 100%;
+}
+
+.image-container{
+  width: 100%;
+  height: 100%;
+}
+
+.youtube-container{
+  width: 100%;
+  height: 100%;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  margin-right: 30px;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
