--- a/src/styles.css
+++ b/src/styles.css
@@ -63,6 +63,7 @@ body{
     background-color: #ffffff;
     color: #333;
     border: none;
+    cursor: pointer;
     border-radius: 50px;
     transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease-in-out, transform 0.1s ease-in-out;
 }
@@ -102,3 +103,5 @@ body{
         --row-gap: 8%
     }
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
