Finished the portfolio website, added the scrolling media buttons, removed the project media for the time being, fixed a good amount of formatting issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <app-project-module id="work"></app-project-module>
 <app-contact id="contact"></app-contact>
 <app-scroll-top></app-scroll-top>
+<app-contact-info></app-contact-info>
 <router-outlet></router-outlet>
 <youtube-player
 [height]="1"
