--- a/src/app/components/contact/contact/contact.component.css
+++ b/src/app/components/contact/contact/contact.component.css
@@ -1,8 +1,10 @@
 .contact-card{
     margin-top: var(--row-gap);
+    margin-bottom: 3em;
     height: 800px;
     width: 100%;
     padding: 3em 8em;
+    
 }
 
 .section-title{
@@ -22,4 +24,19 @@ fa-icon{
     cursor: pointer;
     text-decoration: none;
     color: white;
+}
+
+@media screen and (max-width: 1200px) {
+    .contact-card{
+        height: 500px;
+        padding: 3em 2em;
+    }
+    .section-title{
+        text-align: center;
+    }
+    
+    div > h3{
+        text-align: center;
+        font-size: 20px;
+    }
 }
