fixed the buttons on the project cards

--- a/src/app/components/projects/project-card/project-card.component.css
+++ b/src/app/components/projects/project-card/project-card.component.css
@@ -18,10 +18,9 @@
 }
 
 .button-container{
-    display: flex;
-    align-content: center;
     height: 50px;
-    /* position: absolute; */
+    position: absolute;
+    bottom: 50px;
 }
 
 button{
