Added and fixed some content

--- a/src/app/components/contact/contact-info/contact-info.component.css
+++ b/src/app/components/contact/contact-info/contact-info.component.css
@@ -48,3 +48,17 @@ button{
         opacity: 1;
     }
 }
+
+@media screen and (max-width: 1200px) {
+    .git {
+        left: 25px;
+    }
+    
+    .email{
+        left: 25px;
+    }
+    
+    .linked-in{
+        left: 25px;
+    }
+}
