--- a/src/app/components/scroll-top/scroll-top.component.css
+++ b/src/app/components/scroll-top/scroll-top.component.css
@@ -17,3 +17,20 @@ button{
 .scroll-top-button-inactive{
     opacity: 0;
 }
+
+@media screen and (max-width: 1200px) {
+    button{
+        width: 50px;
+        height: 50px;
+    }
+    div.fixed {
+        position: fixed;
+        bottom: 100px;
+        right: 25px;
+        color: white;
+      }
+
+    mat-icon {
+        vertical-align: middle;
+    }
+}
